Fixed menu z-index

--- a/src/components/MobileMenuBar/MobileMenuBar.css
+++ b/src/components/MobileMenuBar/MobileMenuBar.css
@@ -5,7 +5,7 @@
 
 .mobile-bottom-menu-bar {
 
-  @apply  md:hidden bg-rgba-grey-dark-08 border-[1px] border-rgba-grey-01 fixed border-l-0 border-r-0 bottom-[0px] left-0 h-[60px] w-full z-[1000];
+  @apply  md:hidden bg-rgba-grey-dark-08 border-[1px] border-rgba-grey-01 fixed border-l-0 border-r-0 bottom-[0px] left-0 h-[60px] w-full z-[12];
   backdrop-filter: blur(3px);
 }
 
@@ -24,10 +24,4 @@
 
 .mobile-bottom-menu-bar .active span {
   @apply  gradient-icon;
-}
-
-.mobile-shadow {
-  @apply h-[200px] w-full absolute bottom-[0px] left-[0px] z-[10] md:z-[2];
-  background: linear-gradient(180deg, rgba(0, 0, 18, 0) 0%, rgba(0, 0, 18, 0.8) 100%);
-  border-radius: 6px;
 }
