--- a/src/components/SportCard/SportCard.css
+++ b/src/components/SportCard/SportCard.css
@@ -49,6 +49,11 @@
   @apply text-center py-[5px] px-[15px] text-[12px] font-[600];
 }
 
+.mobile-shadow {
+  @apply h-[200px] w-full absolute bottom-[0px] left-[0px] z-[10] md:z-[2];
+  background: linear-gradient(180deg, rgba(0, 0, 18, 0) 0%, rgba(0, 0, 18, 0.8) 100%);
+  border-radius: 6px;
+}
 
 
 
